--- a/shoecart/frontend/shoecart/src/App.css
+++ b/shoecart/frontend/shoecart/src/App.css
@@ -672,7 +672,7 @@ body::before {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* max-width: 800px;  */
+  max-width: 1600px; 
   margin: 0 auto;
 }
 
@@ -716,6 +716,49 @@ body::before {
   border: 1px solid #ccc;
   width: 20px !important;
   cursor: pointer;
+}
+
+.scrollable-container {
+  height: 70vh;
+  overflow-y: auto;
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: rgba(155, 155, 155, 0.7) transparent; /* For Firefox */
+}
+
+/* For Chrome, Safari, and Opera */
+.scrollable-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scrollable-container::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollable-container::-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.7);
+  border-radius: 20px;
+  border: transparent;
+}
+
+/* Hide scrollbar when not in use */
+.scrollable-container:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.7);
+}
+
+.scrollable-container::-webkit-scrollbar-thumb:window-inactive {
+  background: transparent;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-container>div {
+  
+  /* This will make each product take up at least 20% of the row width, allowing for 5 items per row at most */
+  margin: 1%;
+  /* Optional: add some margin around each product */
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
