--- a/shoecart/frontend/shoecart/src/App.css
+++ b/shoecart/frontend/shoecart/src/App.css
@@ -603,6 +603,15 @@ span.product-price {
   margin: 0;
 }
 
+.error-message {
+  animation: blinker 1s linear infinite;
+  color: red;
+}
+
+@keyframes blinker {
+  50% { opacity: 0; }
+}
+
 .card {
   margin: auto;
   width: 500px;
